--- a/ExecCareExcess/views/partials/Excess/head.ejs
+++ b/ExecCareExcess/views/partials/Excess/head.ejs
@@ -4,6 +4,12 @@
 
 <script src="/ExeccareProfessionalServices/public/javascripts/jquery-3.3.1.min.js"></script>
 
+<link rel="stylesheet" href="/ExeccareProfessionalServices/public/stylesheets/excess/excessstyles.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+
+<link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote.css" rel="stylesheet">
+<script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote.js"></script>
+
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore.js"></script>
 
@@ -23,8 +29,9 @@
 
 
 
-<link rel="stylesheet" href="/ExeccareProfessionalServices/public/stylesheets/excess/excessstyles.css">
-<link rel="stylesheet" href="/ExeccareProfessionalServices/public/stylesheets/summernote.css">
+
+
+
 <link rel="stylesheet" href="/ExeccareProfessionalServices/public/stylesheets/excess/w3css.css">
 
 <link rel="stylesheet" href="/ExeccareProfessionalServices/public/stylesheets/fullcalendar.css">
@@ -34,9 +41,8 @@
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/codemirror.css">
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/3.20.0/theme/monokai.css">
 
-<link rel="stylesheet" href="/ExeccareProfessionalServices/public/stylesheets/bootstrap.min.css">
-<script src="/ExeccareProfessionalServices/public/javascripts/bootstrap.min.js"></script>
-<script src="/ExeccareProfessionalServices/public/javascripts/summernote.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
 
 
