--- a/ExecCareExcess/views/Pages/Excess/home.ejs
+++ b/ExecCareExcess/views/Pages/Excess/home.ejs
@@ -117,7 +117,9 @@
                                 <div class="modal-footer">
 
                                     <button type="button" class="btn btn-primary">Add</button>
-                                    <button type="button" class="btn btn-success">Cancel booking</button>
+                                    <button type="button" class="btn btn-success" data-toggle="modal" v-on:click="CancelBooking()"
+                                        data-target="#cancelbookingModal">Cancel
+                                        booking</button>
                                     <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#reschedulemodal"
                                         v-on:click="Reschedule()">Reschedule</button>
                                     <button type="button " class="btn btn-info">Goto booking</button>
@@ -167,10 +169,59 @@
                             </div>
                         </div>
                     </div>
+                    <div class="modal fade" id="cancelbookingModal" tabindex="-1" role="dialog" aria-labelledby="cancelbookingModal"
+                        aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered modal-lg" role="document ">
+                            <div class="modal-content" style="width:106% !important">
+                                <div class="modal-header">
+                                    <h5 class="modal-title " id="exampleModalLongTitle">Cancel Booking</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true ">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body ">
+                                    <div class="conrolpanelimg">
+                                        <img src="/ExeccareProfessionalServices/public/images/CancelBooking.jpg " />
+                                    </div>
+
+
+                                    <div class="controlbooking">
+                                        <p>
+                                            This process can not be reverted. Please make 100% sure you want to delete
+                                            the booking and not simply change the booking. For changing booking click
+                                            on "back" and then on Edit
+                                        </p>
+
+                                    </div>
+
+                                    <div class="execdetails">
+                                        {{Name}} {{Surname}}
+                                    </div>
+                                    <div class="execdetails">
+                                        <p>Delete the booking on {{startdate}} {{starttime}}</p>
+                                    </div>
+
+
+                                </div>
+
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-success" v-on:click="CancelBooking()">Ok</button>
+                                    <button type="button" class="btn btn-dange" data-toggle="modal" data-target="#exampleModalCenter"
+                                        v-on:click="BacktoExecutive()">Back</button>
+                                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
 
                 </div>
 
             </div>
+
+        </div>
         </div>
 
     </main>
@@ -193,19 +244,19 @@
             let pages = [];
             const totalPages = Math.ceil(recordCount / 100);
 
-            const pagesLeft = totalPages - currentPage; 
+            const pagesLeft = totalPages - currentPage;
 
             console.log(totalPages);
             console.log(pagesLeft);
 
             if (totalPages > 1) {
-                
+
                 let newPageNum = currentPage;
 
                 pages.push(currentPage);
 
-                for (let index = 1; index < pagesLeft + 1; index++) {                    
-                    
+                for (let index = 1; index < pagesLeft + 1; index++) {
+
                     pages.push(newPageNum + index);
                 }
 
@@ -232,7 +283,10 @@
                 displayrecords: 100,
                 pages: [],
                 currentPage: 1,
-                totalPages: 0
+                totalPages: 0,
+                Name: '',
+                Surname: ''
+
             },
             watch: {
 
@@ -266,7 +320,7 @@
                 },
                 GetExecutives: function (page, search) {
 
-                     let searchVal = search ? search : '-';
+                    let searchVal = search ? search : '-';
 
                     axios.get('/ExeccareProfessionalServices/getExecutives/' + this.currentPage + "/" + searchVal)
 
@@ -299,29 +353,30 @@
 
                 },
                 Reschedule: function () {
-
                     $('#exampleModalCenter').modal('hide');
                     $('#datepicker').datepicker({
                         uiLibrary: 'bootstrap4'
                     });
                     $('#timepicker1').timepicker();
-
                     $('#timepicker1').val(this.starttime);
-
                     $('#datepicker').val(this.startingdate);
-
                 },
                 UpDateTime: function () {
-
                     const newDate = $('#datepicker').val();
-
                     console.log(newDate);
+                },
+                CancelBooking: function (exec) {
+                    $('#exampleModalCenter').modal('hide');
+                    this.Name = this.exec.Name;
+                    this.Surname = this.exec.Surname;
+                },
+                BacktoExecutive: function () {
+                    $('#cancelbookingModal').modal('hide');
                 }
 
             }
 
         });
-
 
 
         function w3_open() {
