--- a/ExecCareExcess/views/Pages/Excess/home.ejs
+++ b/ExecCareExcess/views/Pages/Excess/home.ejs
@@ -139,29 +139,33 @@
                     <div class="modal-dialog modal-dialog-centered modal-lg" role="document ">
                         <div class="modal-content" style="width:106% !important">
                             <div class="modal-header">
-                                <h5 class="modal-title " id="exampleModalLongTitle">Cancel Booking</h5>
+                                <h5 class="modal-title " id="exampleModalLongTitle">Rescedule Appointment</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true ">&times;</span>
                                 </button>
                             </div>
                             <div class="modal-body ">
+
                                 <div class="conrolpanelimg">
                                     <img src="/ExeccareProfessionalServices/public/images/Rescedule.jpg " />
                                 </div>
 
 
-                                <div class="input-group bootstrap-timepicker timepicker">
+                               <div class="appointmentdatetime">
                                     <div class="date">
-                                        <input v-model="startingdate" id="datepicker" width="276" class="form-control" />
-                                    </div>
-
-                                    <div class="time">
-                                        <input v-model="startdate" id="timepicker1" type="text" class="form-control input-small">
-                                        <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
-
-                                    </div>
-                                </div>
-
+                                        <p>
+                                            StartDate
+                                        </p>
+                                            <input v-model="startdate" id="datepicker" width="276" class="form-control" />
+                                        </div>
+    
+                                        <div class="time">
+                                            <p>StartTime</p>
+                                            <input v-model="starttime" id="timepicker1" type="text" width="276"  class="form-control">
+                                        </div>
+                              
+                               </div>
+                                   
 
                             </div>
 
@@ -206,7 +210,7 @@
                                 </div>
                                 <div class="bookingdate">
                                     <p>Delete the booking on {{startdate}}</p>
-                                  
+
                                 </div>
 
 
@@ -240,6 +244,7 @@
 
 
     <script>
+
 
         const searchText = _.debounce((val) => {
 
@@ -356,7 +361,6 @@
 
                             this.startdate = response.data.startingDate;
 
-                            console.log("***************", response.data.startingDate);
 
                         });
 
@@ -369,7 +373,7 @@
                     });
                     $('#timepicker1').timepicker();
                     $('#timepicker1').val(this.starttime);
-                    $('#datepicker').val(this.startingdate);
+                    $('#datepicker').val(this.startdate);
                 },
 
                 UpDateTime: function () {
@@ -395,12 +399,12 @@
 
                     this.Memberid = this.exec.MemberID;
                     this.startdatetime = this.exec.StartDateTime;
+              
+                  alert(this.startdatetime );
                     axios.post('/ExeccareProfessionalServices/deleteDate/' + this.startdatetime + "/" + this.Memberid)
-                        .then(response => {   
-                            $('.loader').show();
-                            window.location = '/ExecCareProfessionalServices/adminhome';
-
-                        });
+                        .then(response => {
+                             window.location = "/ExecCareProfessionalServices/adminhome";
+                        })
 
                 }
 
